--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin: 20px;
-  background-image: url("https://wowsp-wows-na.wgcdn.co/dcont/fb/image/c8d76f7a-252d-11e5-bfd5-000c29ca62ad.jpg");
+  background-image: url("https://www.wallpaperup.com/uploads/wallpapers/2015/06/11/719518/957a651cace81eabfb4a3a283a97cf11.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -135,7 +135,7 @@ body {
 
  .battle-station-header {
    display: flex;
-   height: 100px;
+   flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 200px;
@@ -169,6 +169,18 @@ body {
    text-align: center;
    color: white;
    text-shadow: 1px 1px 2px black;
+ }
+
+ .quit-game {
+   text-align: center;
+   width: 160px;
+   height: 50px;
+   background-color: #302f2f;
+   color: red;
+   border: 1px solid red;
+   border-radius: 5px;
+   margin: 10px;
+   font-size: 20px;
  }
 
 @keyframes App-logo-spin {
